# TauRPC

./: CHANGELOG.md  README.md  dprint.json  eslint.config.mjs  package.json  pnpm-lock.yaml  tsconfig.json
.changeset/: calm-wombats-stand.md  config.json  nice-years-dream.md  pre.json  witty-guests-like.md
.github/workflows/: main.yml  release.yml
example/: package.json  pnpm-lock.yaml
example/src-tauri/: Cargo.toml
example/src-tauri/src/: main.rs
example/src/lib/: bindings.ts
src/: index.ts
taurpc/: Cargo.toml
taurpc/src/: export.rs  lib.rs
taurpc/taurpc-macros/: Cargo.toml  README.md
taurpc/taurpc-macros/src/: generator.rs  lib.rs
