[package]
name = "taurpc"
authors = ["MatsDK"]
version = "0.5.2"
edition = "2024"
description = "A type-safe IPC layer for tauri commands"
documentation = "https://docs.rs/taurpc"
homepage = "https://github.com/MatsDK/TauRPC"
repository = "https://github.com/MatsDK/TauRPC"
license = "MIT OR Apache-2.0"
readme = "../README.md"
categories = []

[package.metadata."docs.rs"]
all-features = true
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
taurpc-macros = { path = "./taurpc-macros", version = "=0.5.2" }

itertools = "0.14.0"
tauri = { version = "2.8.5", features = ["specta"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.145", features = ["preserve_order"] }
tokio = { version = "1.48.0", features = ["full"] }

specta = { version = "=2.0.0-rc.22", features = ["export", "function"] }
specta-serde = { version = "0.0.9", features = [] }
specta-typescript = { version = "0.0.9", features = ["function"] }
heck = "0.5.0"
anyhow = "1.0.100"

[workspace]
members = ["taurpc-macros"]
