[package]
name = "example-v2-beta"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.4.0", features = [] }

[dependencies]
tauri = { version = "2.8.2", features = [] }
tauri-plugin-shell = "2.3.0"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"

tokio = { version = "1.45.1", features = ["full"] }
thiserror = "2.0.16"

taurpc = { path = "../../taurpc" }
specta = { version = "=2.0.0-rc.22", features = ["derive", "function"] }
specta-typescript = { version = "0.0.9", features = [] }
