[package]
name = "taurpc-macros"
version = "0.5.2"
edition = "2024"
description = "Macros for the taurpc crate"
documentation = "https://docs.rs/taurpc"
homepage = "https://github.com/MatsDK/TauRPC"
repository = "https://github.com/MatsDK/TauRPC"
license = "MIT OR Apache-2.0"
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.110", features = ["full"] }
quote = "1.0.42"
proc-macro2 = "1.0.103"
serde = { version = "1", features = ["derive"] }

serde_json = { version = "1.0.145", features = ["preserve_order"] }
